# AoC2021

./: CMakeLists.txt  main.cpp
include/common/: converters.hpp  io.hpp  scope_guard.hpp  solution.cpp  solution.hpp  tuple.hpp  util.cpp  util.hpp
include/solutions/2021/0/: main.cpp  main.hpp
include/solutions/2021/1/: main.cpp  main.hpp
include/solutions/2021/10/: main.cpp  main.hpp
include/solutions/2021/11/: main.cpp  main.hpp
include/solutions/2021/12/: main.cpp  main.hpp
include/solutions/2021/13/: main.cpp  main.hpp
include/solutions/2021/14/: main.cpp  main.hpp
include/solutions/2021/15/: main.cpp  main.hpp
include/solutions/2021/16/: main.cpp  main.hpp
include/solutions/2021/17/: main.cpp  main.hpp
include/solutions/2021/18/: main.cpp  main.hpp
include/solutions/2021/19/: main.cpp  main.hpp
include/solutions/2021/2/: main.cpp  main.hpp
include/solutions/2021/20/: main.cpp  main.hpp
include/solutions/2021/21/: main.cpp  main.hpp
include/solutions/2021/22/: main.cpp  main.hpp
include/solutions/2021/23/: main.cpp  main.hpp
include/solutions/2021/24/: main.cpp  main.hpp
include/solutions/2021/25/: main.cpp  main.hpp
include/solutions/2021/3/: main.cpp  main.hpp
include/solutions/2021/4/: main.cpp  main.hpp
include/solutions/2021/5/: main.cpp  main.hpp
include/solutions/2021/6/: main.cpp  main.hpp
include/solutions/2021/7/: main.cpp  main.hpp
include/solutions/2021/8/: main.cpp  main.hpp
include/solutions/2021/9/: main.cpp  main.hpp
